force-app/main/default/objects/FS_Encuesta__c/FS_Encuesta__c.object-meta.xml
<CustomObject>
    <label>Encuesta</label>
    <nameField>
        <displayFormat>EC-{0000000}</displayFormat>
        <label>Nombre de Encuesta</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Encuestas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>