force-app/main/default/objects/FS_Encuesta__c/fields/FS_Caso__c.field-meta.xml
<CustomField>
    <fullName>FS_Caso__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Caso</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Encuesta</relationshipLabel>
    <relationshipName>Encuesta</relationshipName>
    <type>Lookup</type>
</CustomField>