force-app/main/default/objects/FS_Encuesta__c/fields/FS_Comentarios__c.field-meta.xml
<CustomField>
    <fullName>FS_Comentarios__c</fullName>
    <label>Comentarios</label>
    <length>130768</length>
    <type>LongTextArea</type>
</CustomField>