force-app/main/default/objects/FS_Encuesta__c/fields/FS_CreadoPor__c.field-meta.xml
<CustomField>
    <fullName>FS_CreadoPor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Creado Por</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Encuestas</relationshipName>
    <type>Lookup</type>
</CustomField>