force-app/main/default/objects/FS_Encuesta__c/fields/FS_MotivoInsatisfaccion__c.field-meta.xml
<CustomField>
    <fullName>FS_MotivoInsatisfaccion__c</fullName>
    <label>Motivo de Calificación</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Información Incompleta</fullName>
            </value>
            <value>
                <fullName>No se ofrece alternativas</fullName>
            </value>
            <value>
                <fullName>Entrega tiene errores</fullName>
            </value>
            <value>
                <fullName>Desconocimiento del negocio</fullName>
            </value>
            <value>
                <fullName>Servicio</fullName>
            </value>
            <value>
                <fullName>Información completa</fullName>
            </value>
            <value>
                <fullName>Servicio y calidad</fullName>
            </value>
            <value>
                <fullName>Conocimiento del negocio</fullName>
            </value>
            <value>
                <fullName>Brindaron alternativas de solución</fullName>
            </value>
            <value>
                <fullName>Tiempo de entrega</fullName>
            </value>
            <value>
                <fullName>Precio</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>