force-app/main/default/objects/FS_Encuesta__c/fields/FS_ResultadoEncuesta__c.field-meta.xml
<CustomField>
    <fullName>FS_ResultadoEncuesta__c</fullName>
    <label>Resultado Encuesta</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Muy Insatisfecho</fullName>
            </value>
            <value>
                <fullName>Insatisfecho</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
            <value>
                <fullName>Satisfecho</fullName>
            </value>
            <value>
                <fullName>Muy Satisfecho</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>